# Api-productos-rust

./: .env  Cargo.toml  README.md
migrations/: 20260213040215_create-new-tables.sql
src/: lib.rs  main.rs
src/config/: server.rs
src/connexion/: pool.rs
src/error/: mod.rs
src/handler/: brand_handler.rs  category_handler.rs  mod.rs  products_handler.rs
src/models/: product.rs
src/repository/: brand_repository.rs  category_repository.rs  mod.rs  products_repository.rs
src/routes/: routes.rs
src/service/: brand_service.rs  category_service.rs  mod.rs  products_service.rs
