[package]
name = "api-productos"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.8"
base64 = "0.22.1"
bigdecimal = { version = "0.4.10", features = ["serde"]}
chrono = { version = "0.4.43", features = ["serde"]}
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "uuid", "runtime-tokio-rustls", "macros", "bigdecimal", "chrono"]}
thiserror = "2.0.11"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
validator = "0.20.0"

